[package]
name = "cyrus"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "A pure Rust Cytu.be client library."
keywords = ["cytube", "sync", "youtube", "client", "api"]
categories = ["asynchronous", "api-bindings", "web-programming::websocket"]
authors = ["Carrie J V <carrie@carriejv.com"]
homepage = "https://github.com/carriejv/cyrus"
repository = "https://github.com/carriejv/cyrus"
readme = "README.md"

[lib]
name = "libxivdat"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]
test = true
doctest = true
doc = true
harness = true

[dependencies]
